# virtualenv-scraper

./: .gitignore  Makefile  README.md
.kiro/specs/virtualenv-config-viewer/: .config.kiro  design.md  requirements.md  tasks.md
go/: .gitignore  Makefile  go.mod  go.sum
go/internal/analyzer/: analyzer.go  analyzer_test.go
go/internal/config/: reader.go  reader_test.go
go/internal/detector/: detector.go  detector_test.go
go/internal/editor/: editor.go  editor_test.go
go/internal/options/: options.go  options_test.go
go/internal/restart/: restart.go  restart_test.go
go/internal/tui/: tui.go  tui_test.go
python/: Makefile  pyproject.toml
python/src/virtualenv_viewer/: __init__.py  __main__.py  config_reader.py  detector.py  editor.py  options.py  restart.py  shell_analyzer.py  tui.py
python/tests/: test_config_reader.py  test_detector.py  test_editor.py  test_options.py  test_restart.py  test_shell_analyzer.py  test_tui.py
rust/: Cargo.toml  Makefile
rust/src/: config_reader.rs  detector.rs  editor.rs  lib.rs  main.rs  options.rs  restart.rs  shell_analyzer.rs  tui.rs
rust/tests/: config_reader_test.rs  detector_test.rs  options_test.rs  shell_analyzer_test.rs
